Fix: z-index value

--- a/src/components/Card/CarouselCard/carousel-card.css
+++ b/src/components/Card/CarouselCard/carousel-card.css
@@ -1,24 +1,25 @@
 .overlay-text {
-    top: 40%;
-    opacity: 70%;
-    font-weight: 900;
-    font-size: 1.2rem;
-    text-align: center;
-    padding: 0;
-    width: 100%;
-    background-color: var(--white);
-    color:var(--black);
+  top: 40%;
+  opacity: 70%;
+  font-weight: 900;
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 0;
+  width: 100%;
+  background-color: var(--white);
+  color: var(--black);
+  z-index: 0;
 }
 
 .card-midtext {
-    background-color: transparent;
-    height: 7rem;
-    overflow: hidden;
-    transition: all linear 0.2s;
-    padding: 1px;
-    border-radius: var(--sp-0-5);
+  background-color: transparent;
+  height: 7rem;
+  overflow: hidden;
+  transition: all linear 0.2s;
+  padding: 1px;
+  border-radius: var(--sp-0-5);
 }
 
 .card-midtext:hover {
-    transform: scale(95%);
+  transform: scale(95%);
 }
